--- a/content/about.njk
+++ b/content/about.njk
@@ -3,7 +3,7 @@ title: About
 rss: false
 eleventyNavigation:
   key: About
-  emoji: <span class="emoji" aria-hidden="true">💁🏻‍♀️</span>
+  emoji: <span class="emoji" aria-hidden="true">🌷</span>
   order: 1
 style: '@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");'
 scripts: '<link rel="stylesheet" href="/css/pages/about.css">'
@@ -17,13 +17,15 @@ scripts: '<link rel="stylesheet" href="/css/pages/about.css">'
 
 	<span class="bigboibanner">Internet witch</span>
 
-	<div class="charactersheet">
-
 	{{ macro.callout(
         element = 'aside',
         modifiers = '',
-		header = '<h2>🛠️ Work in progress</h2>',
+		emoji = '🛠️',
+		header = '<h2>Work in progress</h2>',
         body = 'For the development of this page, I am working in the open! So you\'ll see it only partly built. There may be bugs or things might look weird on certain browsers or device widths. That\'s the beauty!') }}
+
+
+	<div class="charactersheet">
 
 	<div class="charactersheet-character">
 		<div class="whosthatgirl">
