--- a/content/experiments/html-named-colors.njk
+++ b/content/experiments/html-named-colors.njk
@@ -199,6 +199,7 @@ scripts: '
     {{ macro.callout(
 			element = 'aside',
 			modifiers = 'callout--small reading-width',
+			emoji = '<span class="emoji" role="img" aria-label="Spanner and hammer">🛠️</span>',
 			body = 'Filter and copy functionality requires JavaScript to work') }}
   </noscript>
   <header class="namedcolours__header noscriptHide">
