--- a/content/guestbook.njk
+++ b/content/guestbook.njk
@@ -36,6 +36,7 @@ scripts: '<script src="/js/guestbook.js" defer></script>'
       {{ macro.callout(
         element = 'div',
         modifiers = 'callout--small',
+			  emoji = '<span class="emoji" role="img" aria-label="Spanner and hammer">🛠️</span>',
         body = 'Guestbook requires JavaScript to work') }}
   </noscript>
   <div id="c_widget"></div>
