--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -3,7 +3,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%if title %}{{ title | safe}} -{% endif %} {{ metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
+    {#- Places I claim on the internet -#}
     <link rel="me" href="https://indieweb.social/@frills">
+    <link rel="me" href="https://social.lol/@frills">
+    <link rel="me" href="https://frills.omg.lol">
     {# Favicon -#}
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
