--- a/content/links.njk
+++ b/content/links.njk
@@ -310,6 +310,11 @@ scripts: '<script>
     "href": "https://velvet-boutique.neocities.org",
     "src": "velvet.png",
     "type": "button"
+  }, {
+    "name": "Nenrikido",
+    "href": "https://nenrikido.neocities.org",
+    "src": "nenrikido.png",
+    "type": "button"
   }
 ] %}
 
@@ -345,6 +350,12 @@ scripts: '<script>
     "size": "12px",
     "bg": "#222831",
     "color": "#b6ff00"
+  }, {
+    "name": "Alex Jegtnes",
+    "href": "https://jegtnes.com/",
+    "size": "12px",
+    "bg": "#ffffff",
+    "color": "#222222"
   }
 ] %}
 
@@ -463,7 +474,7 @@ scripts: '<script>
     "color": "#000",
     "type": "link"
   }, {
-    "name": "TinyPNG",
+    "name": "Tinypng",
     "href": "https://tinypng.com/",
     "size": "12px",
     "bg": "#080706",
