📊 Add tinylytics and kudos

--- a/structure/core/_template-end.njk
+++ b/structure/core/_template-end.njk
@@ -2,6 +2,7 @@
 <script src="/js/main.js"></script>
 <script src="/js/theme.js"></script>
 <script data-goatcounter="https://frills.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+<script src="https://tinylytics.app/embed/81AsSQ65Uii1Jszrzzcs.js?hits&kudos" defer></script>
 {% if scripts -%}
 {{scripts|safe}}
 {%- endif %}
