--- a/structure/pages/item-blog.njk
+++ b/structure/pages/item-blog.njk
@@ -27,5 +27,7 @@
         <div class="reading-width{% if tags.includes("weeknotes") %} h-sm{% endif %}">
             {{ content | safe }}
         </div>
+        <h2 class="visually-hidden">Kudos</h2>
+        <button class="hidden tinylytics_kudos"></button>
     </article>
 {%- endblock -%}
