--- a/structure/pages/item-blog.njk
+++ b/structure/pages/item-blog.njk
@@ -28,6 +28,6 @@
             {{ content | safe }}
         </div>
         <h2 class="visually-hidden">Kudos</h2>
-        <button class="hidden tinylytics_kudos"></button>
+        <button class="button ghost large tinylytics_kudos"></button>
     </article>
 {%- endblock -%}
