📊 Change kudos icon

--- a/structure/core/_template-end.njk
+++ b/structure/core/_template-end.njk
@@ -1,7 +1,7 @@
 <script src="/js/sparkles.js"></script>
 <script src="/js/main.js"></script>
 <script src="/js/theme.js"></script>
-<script src="https://tinylytics.app/embed/81AsSQ65Uii1Jszrzzcs.js?hits&kudos" defer></script>
+<script src="https://tinylytics.app/embed/81AsSQ65Uii1Jszrzzcs.js?hits&kudos=💖" defer></script>
 {% if scripts -%}
 {{scripts|safe}}
 {%- endif %}
