--- a/content/now.njk
+++ b/content/now.njk
@@ -5,7 +5,7 @@ eleventyNavigation:
   emoji: <span class="emoji" aria-hidden="true">⌚</span>
   order: 2
 rss: true
-date: 2024-02-02
+date: 2024-02-19
 ---
 {% extends 'structure/templates/page-2col.njk'%}
 
@@ -21,17 +21,16 @@ date: 2024-02-02
 
   <h2>Days</h2>
   <ul>
-    <li>My reading binge has slowed massively. I'm not making time for it specifically so it's just not happening at the moment.</li>
-    <li>Designed and paid for my engagement and wedding ring.</li>
+    <li>Playing around with <a href="https://omg.lol">omg.lol</a>.</li>
+    <li>Back into reading! But the one I am on right now is chunky so it's taking me a bit.</li>
     <li>Posting daily summaries on Mastodon with a '<a href="https://indieweb.social/tags/todayiam">Today I am</a>' series.</li>
     <li>Binge watching <a href="https://www.imdb.com/title/tt10986410/">Ted Lasso</a>.</li>
-    <li>Creating a 5e Norse cleric for a solo adventure.</li>
     <li>My theme for <a href="https://32bit.cafe/">32bit.cafe</a> is the default at the moment!</li>
   </ul>
   {# ------------------------------ #}
   <h2>Weeks</h2>
   <ul>
-    <li>Sort of Spring cleaning, sorting through old stuff and moving things around my house.</li>
+    <li>Home sort out.</li>
     <li>Slowly working on my new RPG inspired about page.</li>
     <li>GM'd a play through of <a href="https://gothhoblin.itch.io/trash-pals">Trash Pals</a> (my first GM experience).</li>
   </ul>
