--- a/content/links.njk
+++ b/content/links.njk
@@ -315,6 +315,11 @@ scripts: '<script>
     "href": "https://nenrikido.neocities.org",
     "src": "nenrikido.png",
     "type": "button"
+  }, {
+    "name": "Robb Knight",
+    "href": "https://rknight.me/",
+    "src": "robbknight.png",
+    "type": "button"
   }
 ] %}
 
