🎨  Update colour palette shapes

--- a/content/index.njk
+++ b/content/index.njk
@@ -203,7 +203,7 @@ scripts: '
 		<li style="background-color: var(--link)"></li>
 		<li style="background-color: var(--linkhover)"></li>
 		<li style="background-color: var(--linkvisited)"></li>
-		<li style="background-color: var(--dashboard-bg)"></li>
+		<li style="background-color: var(--dashboard-header-bg)"></li>
 		<li style="background-color: var(--callout-info)"></li>
 		<li style="background-color: var(--logo-anim-1)"></li>
 		<li style="background-color: var(--logo-anim-2)"></li>
