--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -31,6 +31,7 @@
   --linkvisited: #ff5790;
   --text: LavenderBlush;
   --subtext: PeachPuff;
+  --marker: "⭐";
   --dashboard-header-bg: Gold;
   --dashboard-text: Black;
   --callout-info: DeepSkyBlue;
@@ -63,6 +64,7 @@
     --linkvisited: purple;
     --text: #05134d;
     --subtext: DarkRed;
+    --marker: "💖";
     --dashboard-header-bg: Gold;
     --dashboard-text: Black;
     --logo-x: Gold;
@@ -93,6 +95,7 @@
   --linkvisited: purple;
   --text: #05134d;
   --subtext: DarkRed;
+  --marker: "💖";
   --dashboard-header-bg: Gold;
   --dashboard-text: Black;
   --logo-x: Gold;
