📃 Change 'About the site' to 'Colophon'

--- a/structure/global/footer.njk
+++ b/structure/global/footer.njk
@@ -3,7 +3,7 @@
         <ul>
             <li><span class="emoji" aria-hidden="true">⬆️</span> <a href="#top">Back to top</a></li>
             <li><span class="emoji" aria-hidden="true">♿</span> <a href="/accessibility">Accessibility</a>
-            <li><span class="emoji" aria-hidden="true">👩‍💻</span> <a href="/site">About the site</a>
+            <li><span class="emoji" aria-hidden="true">👩‍💻</span> <a href="/colophon">Colophon</a>
         </ul>
     </nav>
 </footer>
