--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -18,11 +18,11 @@
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     {# Style -#}
-    <link href="/css/main.css?nocache=boop" rel="stylesheet">
+    <link href="/css/main.css?nocache=beep" rel="stylesheet">
     {% if style -%}
     <style>{{ style | safe }}</style>
     {%- endif %}
     {# Font -#}
     <link rel="preload" as="font" href="/fonts/atkinson-hyperlegible/regular.woff2" crossorigin>
-    <noscript><link href="/css/noscript.css?nocache=boop" rel="stylesheet"></noscript>
+    <noscript><link href="/css/noscript.css?nocache=beep" rel="stylesheet"></noscript>
 </head>
