--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -1,7 +1,7 @@
 {% import "structure/components/components.njk" as macro with context %}
 <header class="page__header grid grid--header">
     <a href="/" class="page__logo">
-        <span class="visually-hidden">Frills</span>
+        <span class="visually-hidden">Homepage</span>
         {% include "structure/components/logo.njk" %}
     </a>
     {% include "structure/global/nav.njk" %}
