--- a/assets/css/base/_page.css
+++ b/assets/css/base/_page.css
@@ -3,18 +3,18 @@
   max-width: 1600px;
   margin: 0 auto;
   min-height: 100vh;
-  padding: 0 22px;
+  padding: 0 1.2rem;
 }
 
 @media (min-width: 768px) {
   .page {
-    padding: 0 36px;
+    padding: 0 1.5rem;
   }
 }
 
 @media (min-width: 992px) {
   .page {
-    padding: 0 56px;
+    padding: 0 4rem;
   }
 }
 
@@ -31,16 +31,16 @@
 
 /* Main */
 .page__main {
-  padding: 30px 0 0 0;
+  padding: 1.5rem 0 0 0;
 }
 
 @media (min-width: 768px) {
   .page__main {
-    padding: 60px 0 0 0;
+    padding: 3rem 0 0 0;
   }
 }
 
 /* Footer */
 .page__footer {
-  padding: 60px 0;
+  padding: 3rem 0 1rem 0;
 }
