♿ Add tabindex to main

--- a/structure/templates/page-empty.njk
+++ b/structure/templates/page-empty.njk
@@ -1,7 +1,7 @@
 {% extends "structure/core/base.njk" %}
 
 {% block content %}
-<main class="page__empty" id="main">
+<main tabindex="0" class="page__empty" id="main">
     {% block main %}
     {{ content | safe }}
     {% endblock %}
