--- a/content/index.njk
+++ b/content/index.njk
@@ -3,7 +3,7 @@ title: Home
 rss: false
 scripts: '
 	<script>
-	const n=new Date,h=n.getHours(),d=n.toLocaleTimeString("en-GB",{timeZone:"Europe/London",hour:"2-digit",hour12:!0,minute:"2-digit"});e=d.replace(/\s/g,""),document.querySelector("#localTime").innerHTML=e;const dhr=n.toLocaleTimeString("en-GB",{timeZone:"Europe/London",hour:"2-digit"});let st,stT;dhr>=0&&dhr<7?(st="offline",stT="Sleepin’"):dhr>=7&&dhr<9?(st="online",stT="Online now!"):dhr>=9&&dhr<17?(st="away",stT="Workin’"):dhr>=17&&dhr<23?(st="online",stT="Online now!"):dhr>=23&&dhr<24&&(st="offline",stT="Sleepin’"),document.querySelector("#status").dataset.status=st,document.querySelector("#statusText").innerText=stT;let m;h>=0&&h<12?m="Good morning!":h>=12&&h<17?m="Good afternoon!":h>=17&&h<24&&(m="Good evening!"),document.querySelector("#greetingText").innerHTML=m;
+	const n=new Date,h=n.getHours(),d=n.toLocaleTimeString("en-GB",{timeZone:"Europe/London",hour:"2-digit",hour12:!0,minute:"2-digit"});e=d.replace(/\s/g,""),document.querySelector("#localTime").innerHTML=e;const dhr=n.toLocaleTimeString("en-GB",{timeZone:"Europe/London",hour:"2-digit"});let st,stT;dhr>=0&&dhr<7?(st="offline",stT="Sleepin’"):dhr>=7&&dhr<9?(st="away",stT="Gettin’ ready!"):dhr>=9&&dhr<17?(st="donotdisturb",stT="Workin’"):dhr>=17&&dhr<23?(st="online",stT="Online now!"):dhr>=23&&dhr<24&&(st="offline",stT="Sleepin’"),document.querySelector("#status").dataset.status=st,document.querySelector("#statusText").innerText=stT;let m;h>=0&&h<12?m="Good morning":h>=12&&h<17?m="Good afternoon":h>=17&&h<24&&(m="Good evening"),document.querySelector("#greetingText").innerHTML=m;
 	</script>
 	<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
 	<script>
@@ -17,31 +17,7 @@ scripts: '
 {% import "structure/components/components.njk" as macro with context %}
 
 {%- block left -%}
-<div class="bio">
-	<h2 class="visually-hidden">Bio</h2>
-	<div class="avatar">
-		<div class="avatar__script swapAvatar">
-			<noscript>
-				<img class="avatar__noscript" src="/images/pic.png" alt="Black and white avatar illustration: a smiling woman with shoulder length dark hair, large eyes and sparkles surrounding her" width="200" height="200">
-			</noscript>
-		</div>
-		<div class="avatar__extra">
-			<button id="refreshAvatar" class="button hidden noscriptHide">
-				🔃 Refresh avatar
-			</button>
-			<span>🖼️ <a href="/collections/avatars" class="hidden">More avatars</a></span>
-		</div>
-	</div>
-	<ul class="unstyled">
-		<li class="noscriptHide"><span class="emoji" role="img" aria-label="Wave">👋</span> <span id="greetingText">Good timezone!</span></li>
-		<li><span class="emoji" role="img" aria-label="Pronouns">🌷</span> she/her</li>
-		<li><span class="emoji" role="img" aria-label="Location">📍</span> Wales, UK</li>
-		<li class="noscriptHide"><span class="emoji" role="img" aria-label="Local time">⏰</span> <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (gmt)</li>
-		{# <li><span class="emoji" role="img" aria-label="Sun sign">🌞</span> Gemini</li> #}
-		{# <li><span role="img" class="emoji" aria-label="Moon sign">🌚</span> Scorpio</li> #}
-		<li><span id="status" class="status" data-status="online"></span> <span id="statusText">Online now!</span></li>
-	</ul>
-</div>
+	{% include "structure/components/bio.njk" %}
 {%- endblock -%}
 
 {%- block main -%}
@@ -61,10 +37,10 @@ scripts: '
 	<article class="dashboard__item dashboard__item--gallery">
 		<h2 class="visually-hidden">Gallery</h2>
 		<figure>
-			<img src="/images/piclog/piclog2.jpg" alt="White woman (me) stood with their back to the camera standing on a wooden jetty looking out at the lake with my labrador, Orla. A lens flare from the sun in the top left." loading="lazy" width="100" height="100">
+			<img src="/images/piclog/piclog2.jpg" alt="Caucasian woman (me) stood with their back to the camera standing on a wooden jetty looking out at the lake with my labrador, Orla. A lens flare from the sun in the top left." loading="lazy" width="100" height="100">
 		</figure>
 		<figure>
-			<img src="/images/piclog/piclog0.jpg" alt="White woman (me) with brown hair wearing an orange hat looks away from the camera to the left." loading="lazy" width="100" height="100">
+			<img src="/images/piclog/piclog0.jpg" alt="Caucasian woman (me) with brown hair wearing an orange hat looks away from the camera to the left." loading="lazy" width="100" height="100">
 		</figure>
 		<figure>
 			<img src="/images/piclog/piclog1.jpg" alt="People walking out of the sea as the sun rises through the clouds behind them" loading="lazy" width="100" height="100">
@@ -72,8 +48,8 @@ scripts: '
 	</article>
 	<div class="dashboard__item av-br">
 		<h2 class="visually-hidden">Intro</h2>
-		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you.</p>
-		<p>I am Frills<span class="noscriptHide"> (<button data-speak="Frills" type="button" class="dotted" aria-label="Say 'Frills'">frɪlz</button> 🔊)</span>, the proud webmistress of this website in this wondrous wifi world, learn more <a href="/about">about me</a> or <a href="/colophon">about this website</a>.</p>
+		<p><span id="greetingText">Greetings</span>, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you.</p>
+		<p>I am Frills<span class="noscriptHide"> (<button data-speak="Frills" type="button" class="dotted" aria-label="Say 'Frills'">/frɪlz/</button> 🔊)</span>, the proud webmistress of this website in this wondrous wifi world, learn more <a href="/about">about me</a> or <a href="/colophon">about this website</a>.</p>
 		<p>Here you will find my latest <a href="/blog">thoughts</a> and <a href="/experiments">experiments</a>, <a href="/links">portals to other websites</a>, and <a href="/guestbook">messages</a> left by other wanderers.</p>
 	</div>
 	{# <div class="dashboard__item">
