--- a/content/now.njk
+++ b/content/now.njk
@@ -5,7 +5,7 @@ eleventyNavigation:
   emoji: <span class="emoji" aria-hidden="true">⌚</span>
   order: 2
 rss: true
-date: 2024-02-19
+date: 2024-02-23
 ---
 {% extends 'structure/templates/page-2col.njk'%}
 
@@ -21,9 +21,11 @@ date: 2024-02-19
 
   <h2>Days</h2>
   <ul>
-    <li>Playing around with <a href="https://omg.lol">omg.lol</a>.</li>
-    <li>Back into reading! But the one I am on right now is chunky so it's taking me a bit.</li>
+    <li>Playing <a href="https://rogule.com/">Rogule</a> daily.</li>
+    <li>Playing <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> daily.</li>
+    <li>Still reading, slower but still doin' it.</li>
     <li>Posting daily summaries on Mastodon with a '<a href="https://indieweb.social/tags/todayiam">Today I am</a>' series.</li>
+    <li>Exploring <a href="https://omg.lol">omg.lol</a>.</li>
     <li>Binge watching <a href="https://www.imdb.com/title/tt10986410/">Ted Lasso</a>.</li>
     <li>My theme for <a href="https://32bit.cafe/">32bit.cafe</a> is the default at the moment!</li>
   </ul>
@@ -31,8 +33,7 @@ date: 2024-02-19
   <h2>Weeks</h2>
   <ul>
     <li>Home sort out.</li>
-    <li>Slowly working on my new RPG inspired about page.</li>
-    <li>GM'd a play through of <a href="https://gothhoblin.itch.io/trash-pals">Trash Pals</a> (my first GM experience).</li>
+    <li>Working in the open for my RPG inspired about page.</li>
   </ul>
   {# ------------------------------ #}
   <h2>Months</h2>
